--- a/package.json
+++ b/package.json
@@ -1,29 +1,46 @@
 {
   "name": "tbd-fit",
   "version": "1.0.0",
-  "description": "My Remotion video",
+  "description": "Video PNG overlay editor",
+  "main": "electron-dist/main.js",
   "repository": {},
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
+    "@remotion/bundler": "^4.0.427",
     "@remotion/cli": "4.0.427",
+    "@remotion/media-utils": "^4.0.427",
+    "@remotion/player": "^4.0.427",
+    "@remotion/renderer": "^4.0.427",
+    "@remotion/tailwind-v4": "4.0.427",
+    "electron": "^40.6.1",
+    "express": "^5.2.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-rnd": "^10.5.2",
     "remotion": "4.0.427",
-    "@remotion/tailwind-v4": "4.0.427",
     "tailwindcss": "4.0.0"
   },
   "devDependencies": {
     "@remotion/eslint-config-flat": "4.0.427",
+    "@types/express": "^5.0.6",
     "@types/react": "19.2.7",
     "@types/web": "0.0.166",
+    "@vitejs/plugin-react": "^5.1.4",
+    "concurrently": "^9.2.1",
+    "electron-builder": "^26.8.1",
     "eslint": "9.19.0",
     "prettier": "3.8.1",
-    "typescript": "5.9.3"
+    "typescript": "5.9.3",
+    "vite": "^7.3.1"
   },
   "scripts": {
-    "dev": "remotion studio",
-    "build": "remotion bundle",
+    "dev": "tsc -p electron/tsconfig.json && concurrently \"vite --config vite.config.ts\" \"electron .\"",
+    "dev:studio": "remotion studio",
+    "build:renderer": "vite build --config vite.config.ts",
+    "build:electron": "tsc -p electron/tsconfig.json",
+    "build": "npm run build:renderer && npm run build:electron",
+    "dist": "npm run build && electron-builder",
     "upgrade": "remotion upgrade",
     "lint": "eslint src && tsc"
   },
