--- a/package.json
+++ b/package.json
@@ -1,38 +1,38 @@
 {
   "name": "tbd-fit",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "Video PNG overlay editor",
   "main": "electron-dist/main.js",
   "repository": {},
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
-    "@remotion/bundler": "^4.0.427",
+    "@remotion/bundler": "4.0.427",
     "@remotion/cli": "4.0.427",
-    "@remotion/media-utils": "^4.0.427",
-    "@remotion/player": "^4.0.427",
-    "@remotion/renderer": "^4.0.427",
+    "@remotion/media-utils": "4.0.427",
+    "@remotion/player": "4.0.427",
+    "@remotion/renderer": "4.0.427",
     "@remotion/tailwind-v4": "4.0.427",
-    "express": "^5.2.1",
+    "express": "5.2.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "react-rnd": "^10.5.2",
+    "react-rnd": "10.5.2",
     "remotion": "4.0.427",
     "tailwindcss": "4.0.0"
   },
   "devDependencies": {
     "@remotion/eslint-config-flat": "4.0.427",
-    "@types/express": "^5.0.6",
+    "@types/express": "5.0.6",
     "@types/react": "19.2.7",
     "@types/web": "0.0.166",
-    "@vitejs/plugin-react": "^5.1.4",
-    "concurrently": "^9.2.1",
-    "electron": "^40.6.1",
-    "electron-builder": "^26.8.1",
+    "@vitejs/plugin-react": "5.1.4",
+    "concurrently": "9.2.1",
+    "electron": "40.6.1",
+    "electron-builder": "26.8.1",
     "eslint": "9.19.0",
     "prettier": "3.8.1",
     "typescript": "5.9.3",
-    "vite": "^7.3.1"
+    "vite": "7.3.1"
   },
   "scripts": {
     "dev": "tsc -p electron/tsconfig.json && concurrently \"vite --config vite.config.ts\" \"electron .\"",
