--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -16,6 +16,10 @@ extraResources:
     to: "whisper"
     filter:
       - "**/*"
+  - from: "resources/ffmpeg"
+    to: "."
+    filter:
+      - "**/*"
 afterPack: ./scripts/fix-remotion-dylibs.js
 mac:
   category: public.app-category.video
